k8s/apps/automation/kagent/app/route.yaml
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kagent
  namespace: automation
spec:
  hostnames:
    - kagent.jnobrega.com
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: kagent-ui
          namespace: automation
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
